vemo-app/main/default/objects/TransactionBatch__c/TransactionBatch__c.object-meta.xml
<CustomObject>
    <label>Disbursement Batch</label>
    <nameField>
        <displayFormat>DB-{YYYY}{MM}{DD}{0}</displayFormat>
        <label>Disbursement Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursement Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>