vemo-app/main/default/objects/TransactionBatch__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>