vemo-app/main/default/objects/TransactionBatch__c/fields/TransactionBatchStatus__c.field-meta.xml
<CustomField>
    <fullName>TransactionBatchStatus__c</fullName>
    <label>Transaction Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Select Transactions</fullName>
            </value>
            <value>
                <fullName>Freeze Transactions</fullName>
            </value>
            <value>
                <fullName>Release Transactions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>