vemo-app/main/default/objects/TransactionBatch__c/fields/TransactionsFrom__c.field-meta.xml
<CustomField>
    <fullName>TransactionsFrom__c</fullName>
    <label>Transactions From</label>
    <type>Date</type>
</CustomField>