vemo-app/main/default/objects/TransactionBatch__c/fields/TransactionsThrough__c.field-meta.xml
<CustomField>
    <fullName>TransactionsThrough__c</fullName>
    <label>Transactions Through</label>
    <type>Date</type>
</CustomField>