vemo-app/main/default/objects/TransactionBatch__c/fields/UpdateConfirmed__c.field-meta.xml
<CustomField>
    <fullName>UpdateConfirmed__c</fullName>
    <label>Update Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Not Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>