vemo-app/main/default/objects/TransactionBatch__c/fields/UpdateTransactionDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateTransactionDate__c</fullName>
    <label>Update Transaction Date</label>
    <type>Date</type>
</CustomField>