vemo-app/main/default/objects/TransactionBatch__c/fields/UpdateTransactionDateTime__c.field-meta.xml
<CustomField>
    <fullName>UpdateTransactionDateTime__c</fullName>
    <label>DEPRECATEUpdate Transaction DateTime</label>
    <type>DateTime</type>
</CustomField>