vemo-app/main/default/objects/TransactionBatch__c/fields/UpdateTransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>UpdateTransactionStatus__c</fullName>
    <label>Update Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TransactionStatus</valueSetName>
    </valueSet>
</CustomField>