vemo-app/main/default/objects/TransactionBatch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TransactionBatchStatus__c</columns>
    <columns>TransactionsFrom__c</columns>
    <columns>TransactionsThrough__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>